build(rc-1.1.2): add new release features

--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
   "name": "energisa-azure-devops-sdk",
-  "version": "1.2.0",
+  "version": "1.2.2",
   "description": "SDK for Energisa Azure Devops Server",
   "scripts": {
     "build": "rimraf dist/ && tsc -d && npm run copy:styles && node ./build-package.js",
-    "copy:styles": "cp -r ./src/styles ./dist/styles",
+    "copy:styles": "ncp ./src/styles ./dist/styles",
     "lint": "eslint src --ignore-path .eslintignore --ext ts --ext tsx --ext js --ext jsx",
     "lint:fix": "eslint --fix src --ignore-path .eslintignore --ext ts --ext tsx --ext js --ext jsx",
     "autoformat": "./node_modules/.bin/prettier --write 'src/**/**.scss' 'src/**/*.tsx'",
     "test:coverage": "env TEST_REPORT_FILENAME=test-results.xml jest --verbose --coverage",
     "test": "env TEST_REPORT_FILENAME=test-results.xml jest --verbose",
-    "test:ci": "env TEST_REPORT_FILENAME=test-results.xml jest --verbose --coverage --ci"
+    "test:ci": "env TEST_REPORT_FILENAME=test-results.xml jest --verbose --coverage --ci",
+    "prepublish": "npm run build",
+    "publish": "npm run build && npm publish --access public",
+    "package": "npm run build && npm pack",
+    "version": "npm run build && git add -A dist/ && git commit -m \"chore: update dist for version $npm_package_version\" && git push",
+    "version:patch": "npm version patch && npm run version"
   },
   "repository": {
     "type": "git",
-     "url": "git+https://github.com/johnnie88/energisa-azure-devops-sdk.git"
+    "url": "git+https://github.com/johnnie88/energisa-azure-devops-sdk.git"
   },
   "author": "Joao Ricardo Rodrigues De La Cruz Baptista <joao.baptista@alienbuildtech.com> (https://alienbuildtech.com/)",
   "license": "MIT",
   "bugs": {
-     "url": "https://github.com/johnnie88/energisa-azure-devops-sdk/issues"
+    "url": "https://github.com/johnnie88/energisa-azure-devops-sdk/issues"
   },
   "homepage": "https://github.com/johnnie88/energisa-azure-devops-sdk#readme",
   "devDependencies": {
@@ -40,6 +45,7 @@
     "eslint-plugin-testing-library": "^5.0.3",
     "jest": "^27.4.0",
     "jest-junit-reporter": "^1.1.0",
+    "ncp": "^2.0.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.4"
@@ -52,5 +58,9 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "yup": "^0.32.11"
+  },
+  "dependencies": {
+    "energisa-azure-devops-sdk": "^1.2.1",
+    "semver": "^7.5.4"
   }
 }
