--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://devops.energisa.com.br/Energisa/EngenhariaSoftware/_git/Energisa-Boards-ExtensionSDK"
   },
   "scripts": {
-    "build": "node buildpackage.js"
+    "build": "node ./buildpackage.js",
+    "pack": "cd ./bin && npm pack"
   },
   "keywords": [
     "extensions",
@@ -21,32 +22,16 @@
   },
   "homepage": "https://energisa.com.br",
   "dependencies": {
-    "@types/node": "^20.9.0",
-    "azure-devops-extension-api": "^4.227.0",
-    "azure-devops-extension-sdk": "^4.0.2",
+    "azure-devops-extension-sdk": "~2.0.11",
     "azure-devops-ui": "^2.167.84",
     "whatwg-fetch": "~3.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "classnames": "^2.3.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-simple-import-sort": "^5.0.3",
-    "eslint-plugin-testing-library": "^5.0.3",
     "glob": "~7.1.2",
-    "jest": "^27.4.0",
-    "jest-junit-reporter": "^1.1.0",
-    "ncp": "^2.0.0",
-    "node": "^11.0.0",
+    "node": "^16.0.0",
     "recursive-copy": "~2.0.7",
-    "rimraf": "^3.0.2",
     "shelljs": "~0.8.5",
-    "ts-jest": "^27.0.7",
     "typescript": "^2.9.2",
     "uglify-es": "~3.1.3"
   }
