--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://energisa.com.br",
   "dependencies": {
     "azure-devops-ui": "^2.167.84",
+    "npx": "^10.2.2",
     "whatwg-fetch": "~3.0.0",
     "yup": "^1.3.2"
   },
