feat: add feature props

--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "homepage": "https://energisa.com.br",
   "dependencies": {
     "azure-devops-ui": "^2.167.84",
-    "npx": "^10.2.2",
+    "npx": "^3.0.0",
+    "tsc": "^2.0.4",
     "whatwg-fetch": "~3.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "glob": "~7.1.2",
-    "node": "^16.0.0",
+    "node": "^20.5.0",
     "recursive-copy": "~2.0.7",
     "shelljs": "~0.8.5",
     "typescript": "^2.9.2",
