--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm build && npm pack
+    - name: npm install, build, and test
+      run: |
+        npm install
+        npm run build --if-present
+        npm pack
