--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,8 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
+        npm install typescript
+        npm install @types/node
+        yarn install
         npm run build --if-present
         npm pack
