--- a/package.json
+++ b/package.json
@@ -7,30 +7,28 @@
     "url": "https://devops.energisa.com.br/Energisa/EngenhariaSoftware/_git/Energisa-Boards-ExtensionSDK"
   },
   "scripts": {
-    "build": "node ./buildpackage.js",
-    "pack": "cd ./bin && npm pack"
+    "build": "node buildpackage.js"
   },
   "keywords": [
     "extensions",
     "Azure DevOps",
     "Visual Studio Team Services"
   ],
-  "author": "Joao Ricardo Rodrigues De La Cruz Baptista <joao.baptista@tivit.com> (https://tivit.com/)",
+  "author": "Microsoft",
   "license": "MIT",
   "bugs": {
-    "url": "https://energisa.com.br/AAk5pcm"
+    "url": "https://aka.ms/AAk5pcm"
   },
-  "homepage": "https://energisa.com.br",
+  "homepage": "https://docs.microsoft.com/en-us/azure/devops/integrate",
   "dependencies": {
-    "azure-devops-ui": "^2.167.84",
-    "npx": "^3.0.0",
-    "tsc": "^2.0.4",
-    "whatwg-fetch": "~3.0.0",
-    "yup": "^1.3.2"
+    "whatwg-fetch": "~3.0.0"
+  },
+  "peerDependencies": {
+    "azure-devops-extension-sdk": "^2 || ^3 || ^4"
   },
   "devDependencies": {
     "glob": "~7.1.2",
-    "node": "^20.5.0",
+    "node": "^11.0.0",
     "recursive-copy": "~2.0.7",
     "shelljs": "~0.8.5",
     "typescript": "^2.9.2",
