--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://docs.microsoft.com/en-us/azure/devops/integrate",
   "dependencies": {
-    "whatwg-fetch": "~3.0.0"
+    "@types/node": "^20.9.2",
+    "azure-devops-ui": "^2.167.84",
+    "whatwg-fetch": "~3.0.0",
+    "yup": "^1.3.2"
   },
   "peerDependencies": {
     "azure-devops-extension-sdk": "^2 || ^3 || ^4"
