--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://docs.microsoft.com/en-us/azure/devops/integrate",
   "dependencies": {
     "@types/node": "^20.9.2",
+    "@types/react": "^18.2.37",
     "azure-devops-ui": "^2.167.84",
     "whatwg-fetch": "~3.0.0",
     "yup": "^1.3.2"
