--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://docs.microsoft.com/en-us/azure/devops/integrate",
   "dependencies": {
+    "@fluentui/react": "^8.112.9",
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "azure-devops-ui": "^2.167.84",
+    "classnames": "^2.3.2",
     "whatwg-fetch": "~3.0.0",
     "yup": "^1.3.2"
   },
