feat: add linter

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "azure-devops-extension-sdk": "^2 || ^3 || ^4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.54.0",
     "glob": "~7.1.2",
     "node": "^18.17.0",
     "recursive-copy": "~2.0.7",
