--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
     "azure-devops-ui": "^2.167.84",
-    "classnames": "^2.3.2",
-    "whatwg-fetch": "~3.0.0",
-    "yup": "^1.3.2"
+    "classnames": "^2.3.2"
   },
   "peerDependencies": {
     "azure-devops-extension-sdk": "^2 || ^3 || ^4"
@@ -36,8 +34,6 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.54.0",
-    "glob": "~7.1.2",
-    "node": "^18.17.0",
     "recursive-copy": "~2.0.7",
     "shelljs": "~0.8.5",
     "typescript": "^2.9.2",
