--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "@energisa-sdk/azure-devops-extension-sdk",
-  "version": "4.227.0.preview.rc07",
+  "name": "energisa-azure-devops-sdk",
+  "version": "1.3.7",
   "description": "REST client libraries and contracts for Azure DevOps web extension developers.",
   "repository": {
     "type": "git",
     "url": "https://devops.energisa.com.br/Energisa/EngenhariaSoftware/_git/Energisa-Boards-ExtensionSDK"
   },
   "scripts": {
-    "build": "node buildpackage.js"
+    "build": "node buildpackage.js",
+    "pack": "cd /bin && npm pack"
   },
   "keywords": [
     "extensions",
     "Azure DevOps",
     "Visual Studio Team Services"
   ],
-  "author": "Microsoft",
+  "author": "João Ricardo Rodrigues De La Cruz Baptista (@johnnie88)",
   "license": "MIT",
   "bugs": {
     "url": "https://aka.ms/AAk5pcm"
   },
   "homepage": "https://docs.microsoft.com/en-us/azure/devops/integrate",
   "dependencies": {
-    "whatwg-fetch": "~3.0.0"
+    "whatwg-fetch": "~3.0.0",
+    "yarn": "^1.22.21"
   },
   "peerDependencies": {
     "azure-devops-extension-sdk": "^2 || ^3 || ^4"
